# nyxfall

./: .gitignore  LICENSE  README.md  card.py  main.py  pyproject.toml  scryfall_requester.py  setup.py
.github/workflows/: pytest.yml  python-publish.yml
src/nyxfall/: __main__.py  card.py  paged_response.py  scryfall_requester.py
